Fix Last.fm service browser not updating tree view if it's open upon startup

BUG: 231044